# medicine-dose-tracker

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  django_heroku.yml
accounts/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
medicines/: decorators.py  forms.py  models.py  urls.py  views.py
medicines/migrations/: 0001_initial.py  0002_rename_medicine_name_medicine_name.py
medicines/templates/: index.html
templates/: index.html
templates/accounts/: detail.html  login.html  logout.html  register.html
templates/medicines/: create.html  delete.html  detail.html  edit.html
templates/partials/: _base.html
