[tool.poetry]
name = "medicine-dose-tracker"
version = "0.1.0"
description = ""
authors = ["Dashgin <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
djangorestframework = "^3.12.4"
dj-database-url = "^0.5.0"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
